
 - Move to Github

v0.05 2008.06.08

 - move pod test files to xt/
 - add Perl:Critic test file to xt/
 - cleanup some tests
 - add Test::NoWarnings

v0.04 2007.05.18

 - export catfile
 - add 'mkpath' from File::Path
 - remove the 'mail' function that used non-standard module
 - remove the 'chmod' function that used non-standard module
 - add compare to the list of exported methods (missed in 0.03)

v0.03 2006.08.16

 - add Test::Pod and Test::Pod::Coverage to improve CPANTS rating
 - use Test::Perl::Critic but don't distribute with it
 - add compare function using File::Compare

v0.02 2006.04.24

 - Adding catfile, slurp
 - Adding some tests (increasing total coverage from 41.9 to 71.5)


v0.01 2006.04.14

 - Initial release